# A5-1-Diffie-Hellman-Encryption-C-Library

./: CMakeLists.txt  README.md  main.c
gmp/lib/: libgmp.la  libgmp.so.10.4.1
gmp/lib/pkgconfig/: gmp.pc
include/: a51.h  diffie_hellman.h  minunit.h
src/: a51.c  diffie_hellman.c
test/: a51_test.c
